@@ -598,6 +598,12 @@ Added SocialCalc.Constants.doCanonicalizeSheet to turn this off.
 2009-09-09:
 Added sampleWidth, sampleHeight, backgroundImage, backgroundImageDefault, and backgroundImageDisabled to color chooser attribs.
 
+2009-09-23:
+Added ensureWithin to socialcalcpopup.js.
+Changed cursor position detection a bit in color chooser.
+Made border color chooser moveable.
+Fixed "-", ".", "e1" and other things being considered a number on input.
+
 
 TO DO:
 
